New changes made

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Pet Finder</h1>
-    <div id="pet-container"></div>
+    <div id="the-pet-container"></div>
     <script src="script.js"></script>
 </body>
 </html>
